--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,13 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    //Retrofit
+    def retro_version = "2.9.0"
+    def logging_version = "4.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retro_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retro_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$logging_version"
 }
